# chat-with-docs

./: README.md
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/assets/: assets.ts
client/src/components/container/: container.css  index.tsx
client/src/components/fileupload/: fileupload.css  index.tsx
client/src/context/: AppContext.tsx
server/: .env.example  .flake8  .gitignore  README.md  pyproject.toml  run.py
server/app/: config.py  constant.py  main.py
server/app/routes/: chat.py  file_upload.py
server/app/services/: file_upload_service.py  langchain_service.py
